<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.abg.jreichert.eclipsetestingtools</groupId>
	<artifactId>de.abg.jreichert.eclipsetestingtools.parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<tycho-version>0.13.0</tycho-version>
		<junit-version>4.8.1</junit-version>
		<platform-version-name>indigo</platform-version-name>
		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}
		</eclipse-site>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
	</properties>	

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>
	<build>
		<resources>
			<resource>
				<directory>src</directory>
			</resource>
			<resource>
				<directory>src-gen</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId> 
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id> 
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>6.0</source>
						<target>6.0</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<!-- Kill test JVM if tests take more than 10 minutes (600 seconds) to finish -->
						<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<resolver>p2</resolver>
						<environments>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho-version}</version>
					<executions>
						<execution>
							<id>materialize-products</id>
							<goals>
								<goal>materialize-products</goal>
							</goals>
						</execution>
						<execution>
							<id>archive-products</id>
							<goals>
								<goal>archive-products</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.10</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.surefire</groupId>
							<artifactId>surefire-junit47</artifactId>
							<version>2.10</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion}
							-Dprudent=true
							org.eclipse.tycho:tycho-versions-plugin:set-version
							verify
							scm:checkin
						</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<repositories>
		<repository>
			<id>indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/indigo</url>
		</repository>
	</repositories>	

	<profiles>
		<profile>
			<id>platform-indigo</id>
			<activation>
				<property>
					<name>platform-version-name</name>
					<value>indigo</value>
				</property>
			</activation>
			<properties>
				<eclipse-site>${eclipse-site}</eclipse-site>
				<platform-version>[3.7,3.8)</platform-version>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-packaging-plugin</artifactId>
						<configuration>
							<strictVersions>false</strictVersions>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-scm-plugin</artifactId>
						<configuration>
							<basedir>${basedir}</basedir>
							<includes>${basedir}/../feature/feature.xml,${basedir}/../site/site.xml,${basedir}/repository/category.xml
							</includes>
							<message>[maven-release-plugin] prepare release of OSGI artifacts
							</message>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread
				</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>	
		<profile>
			<id>codeCoverage</id>
			<properties>
				<jacoco.version>0.5.6.201201232323</jacoco.version>

				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
				<jacoco.destFile>../../releng/de.abg.jreichert.junit4runner.parent/target/jacoco.exec</jacoco.destFile>
				<jacoco.append>true</jacoco.append>
				<jacoco.includes>de.abg.jreichert.*</jacoco.includes>
				<!--jacoco.excludes>java.*</jacoco.excludes-->
				<!--jacoco.exclClassLoaders>sun.reflect.DelegatingClassLoader:MyClassLoader</jacoco.exclClassLoaders-->
				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId-->
				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit-->
				<!--jacoco.output>file</jacoco.output-->
				<!--jacoco.address>localhost</jacoco.address-->
				<!--jacoco.port>9999</jacoco.port-->

				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
				<sonar.jacoco.itReportPath>${jacoco.destFile}</sonar.jacoco.itReportPath>

				<sonar.jdbc.url>jdbc:mysql://ec2-174-129-80-78.compute-1.amazonaws.com:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
				<sonar.jdbc.username>sonar</sonar.jdbc.username>
				<sonar.jdbc.password>sonar</sonar.jdbc.password>
				<sonar.host.url>http://ec2-174-129-80-78.compute-1.amazonaws.com:9000/</sonar.host.url>
			</properties> 
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-surefire-plugin</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<argLine>${coverageAgent}</argLine>
							<useUIHarness>false</useUIHarness>
							<includes>
								<include>**/*Test.java</include>
							</includes>
							<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>		
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<distributionManagement>
		<repository>
			<id>cloudbees-release</id>
			<name>Cloudbees Private Repository</name>
			<url>dav:https://repository-joergreichert.forge.cloudbees.com/release</url>
		</repository>
		<snapshotRepository>
			<id>cloudbees-snapshot</id>
			<name>Cloudbees Private Repository</name>
			<url>dav:https://repository-joergreichert.forge.cloudbees.com/snapshot</url>
		</snapshotRepository>
	</distributionManagement>	
</project>